# sign-shape

./: README.md  app.py  app_backup_12312024.py  pyproject.toml  python-env.sh  render.yaml  requirements.txt  s3_test.py
anon-venv/: pyvenv.cfg
anon-venv/Scripts/: activate  activate.bat
instance/: db.sqlite
migrations/versions/: 89b1faf6121e_remove_title_column.py  e0e8ad40035c_add_status_column_to_post_model.py  e26b32b49a80_add_hashed_ip_address_column.py  f900fa4bbbea_added_username_field_to_post_model.py
static/: style-admin.css  style.css
templates/: admin.html  admin_login.html  index.html  pending.html  post.html  review.html
