[tool.poetry]
name = "app.py"
version = "0.1.0"
description = ""
authors = ["Anthony <anthonyespino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"
flask = "^3.1"
flask_sqlalchemy = "^3.1"
gunicorn = "^23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
